DTOs are being splitted to provide better request structure for each REST operation.